--- a/resource_keeper/templates/base.html
+++ b/resource_keeper/templates/base.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="{{url_for('home')}}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">New Category</a>
+            <a class="nav-link" href="{{url_for('add_category')}}">New Category</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Add Resource</a>
