--- a/resource_keeper/templates/categories.html
+++ b/resource_keeper/templates/categories.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h3>Categories</h3>
+<h3 class="text-center pb-4">Categories</h3>
+<div class="row">
+    <div class="col s12 d-flex justify-content-center">
+        <a class="btn btn-primary" href="{{url_for('add_category')}}" role="button"><i class="fa-solid fa-plus"></i> Add Category</a>
+        
+    </div>
+</div>
 {% endblock %}
