--- a/resource_keeper/templates/base.html
+++ b/resource_keeper/templates/base.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
-  <title>Todo App</title>
+  <title>Resource Keeper App</title>
 </head>
 
 <body >
@@ -30,7 +30,7 @@
             <a class="nav-link" href="{{url_for('add_category')}}">New Category</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Add Resource</a>
+            <a class="nav-link" href="{{url_for('edit_categories')}}">Edit Categories</a>
           </li>
         </ul>
       </div>
