--- a/resource_keeper/templates/categories.html
+++ b/resource_keeper/templates/categories.html
@@ -8,4 +8,21 @@
         
     </div>
 </div>
+<div class="row">
+    
+    <div class="col s12 m6 l3 d-flex justify-content-center">
+        {% for category in categories %}
+        <div class="card">
+            <div class="card-body text-center">
+              <h5 class="card-title">{{ category.category_name}}</h5>
+              <a href="#" class="btn btn-primary">View Resources</a>
+              <a href="#" class="btn btn-primary">Add Resource</a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+  
+</div>
+
+</div>
 {% endblock %}
