fix layout of cards

--- a/resource_keeper/templates/edit_categories.html
+++ b/resource_keeper/templates/edit_categories.html
@@ -6,7 +6,7 @@
 <div class="row">
     {% for category in categories %}
     <div class="col s12 m6 l3 d-flex justify-content-center">
-        <div class="card" style="width: 18rem;">
+        <div class="card mb-3" style="width: 18rem;">
             <div class="card-body text-center">
               <h5 class="card-title">{{ category.category_name}}</h5>
               <a href="#" class="btn btn-success">Edit</a>
