--- a/resource_keeper/templates/categories.html
+++ b/resource_keeper/templates/categories.html
@@ -2,26 +2,27 @@
 
 {% block content %}
 <h3 class="text-center pb-4">Categories</h3>
+
 <div class="row">
-    <div class="col s12 d-flex justify-content-center">
+    <div class="col s12 d-flex justify-content-center mb-3">
         <a class="btn btn-primary" href="{{url_for('add_category')}}" role="button"><i class="fa-solid fa-plus"></i> Add Category</a>
         
     </div>
 </div>
 <div class="row">
-    
-    <div class="col s12 m6 l3 d-flex justify-content-center">
-        {% for category in categories %}
-        <div class="card">
+    {% for category in categories %}
+    <div class="col s12 m6 d-flex justify-content-center">
+        
+        <div class="card mb-3" style="width: 18rem;">
             <div class="card-body text-center">
               <h5 class="card-title">{{ category.category_name}}</h5>
-              <a href="#" class="btn btn-primary">View Resources</a>
-              <a href="#" class="btn btn-primary">Add Resource</a>
+              <a href="#" class="btn btn-primary">View</a>
+              <a href="#" class="btn btn-primary">Add</a>
             </div>
         </div>
-        {% endfor %}
+        
     </div>
-  
+    {% endfor %}
 </div>
 
 </div>
