--- a/resource_keeper/templates/categories.html
+++ b/resource_keeper/templates/categories.html
@@ -5,25 +5,21 @@
 
 <div class="row">
     <div class="col s12 d-flex justify-content-center mb-3">
-        <a class="btn btn-primary" href="{{url_for('add_category')}}" role="button"><i class="fa-solid fa-plus"></i> Add Category</a>
+        <a class="btn btn-primary" href="{{url_for('add_category')}}" role="button"><i class="fa-solid fa-plus"></i> New Category</a>
         
     </div>
 </div>
 <div class="row">
     {% for category in categories %}
-    <div class="col s12 m6 d-flex justify-content-center">
-        
-        <div class="card mb-3" style="width: 18rem;">
+    <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card mb-3" style=" border-style: solid; border-color: brown">
             <div class="card-body text-center">
               <h5 class="card-title">{{ category.category_name}}</h5>
-              <a href="#" class="btn btn-primary">View</a>
-              <a href="#" class="btn btn-primary">Add</a>
+              <a href="#" class="btn btn-info">View</a>
+              <a href="{{url_for('add_resource')}}" class="btn btn-info">Add</a>
             </div>
-        </div>
-        
+          </div>
     </div>
-    {% endfor %}
-</div>
-
+  {% endfor %}
 </div>
 {% endblock %}
