--- a/resource_keeper/templates/add_resource.html
+++ b/resource_keeper/templates/add_resource.html
@@ -4,21 +4,19 @@
 <h3 class="text-center pb-4">Add Resource</h3>
 <div class="row">
     <!--input form-->
-    <form class="col s12" action="{{ url_for('add_resource') }}" method="POST">
+    <form class="col-sm-12" action="{{ url_for('add_resource') }}" method="POST">
         <!--form input for task name-->
         <div class="mb-3">
-            <label for="resource_name" class="form-label">Resource URL</label>
+            <label for="resource_name" class="form-label">Resource Name</label>
             <input type="text" name="resource_name" class="form-control" id="resource_name" required>
           </div>
           <div class="mb-3">
-            <label for="resource_description" class="form-label">Resource Description</label>
-            <textarea class="form-control" id="resource_description" rows="3" name="resource_description"></textarea>
+            <label for="resource_url" class="form-label">Resource URL</label>
+            <input type="text" name="resource_url" class="form-control" id="resource_url" required>
           </div>
-          <div class="form-check">
-            <input class="form-check-input" type="radio" name="resource_accessed" id="resource_accessed" value="True">
-            <label class="form-check-label" for="resource_accessed">
-              Resource Accessed
-            </label>
+          <div class="mb-3">
+            <label for="resource_description" class="form-label">Resource Description</label>
+            <textarea class="form-control" id="resource_description" rows="3" name="text"></textarea>
           </div>
           <input class="btn btn-primary" type="submit" value="Submit">
     </form>
