--- a/resource_keeper/templates/base.html
+++ b/resource_keeper/templates/base.html
@@ -37,10 +37,10 @@
     </div>
   </nav> 
 
-  <main class="container">
+  <div class="container main">
     {% block content %}
     {% endblock %}
-  </main>
+  </div>
 
   <!--bs 5 footer-->
   <div>
