--- a/resource_keeper/templates/edit_categories.html
+++ b/resource_keeper/templates/edit_categories.html
@@ -5,8 +5,8 @@
 
 <div class="row">
     {% for category in categories %}
-    <div class="col s12 m6 l3 d-flex justify-content-center">
-        <div class="card mb-3" style="width: 18rem;">
+    <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="card mb-3">
             <div class="card-body text-center">
               <h5 class="card-title">{{ category.category_name}}</h5>
               <a href="#" class="btn btn-success">Edit</a>
