--- a/resource_keeper/templates/add_resource.html
+++ b/resource_keeper/templates/add_resource.html
@@ -4,7 +4,11 @@
 <h3 class="text-center pb-4">Add Resource</h3>
 <div class="row">
     <!--input form-->
-    <form class="col-sm-12" action="{{ url_for('add_resource') }}" method="POST">
+    <form class="col-sm-12" action="{{ url_for('add_resource', category_id=category_id)}}" method="POST">
+      <div class="mb-3">
+        <label for="category_name" class="form-label">Category Name</label>
+        <input type="text" name="category_name" class="form-control" id="category_name" placeholder="{{category_name}}" disabled>
+      </div>
         <!--form input for task name-->
         <div class="mb-3">
             <label for="resource_name" class="form-label">Resource Name</label>
