--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 <h3 class="text-center pb-4">Resources</h3>
-<ul style="list-style-type: none;">
-    {% for resource in resources %}
-    <li class="mb-3">
-        <a target="_blank" href="{{resource.resource_url}}">{{resource.resource_description}}</a>
-        <button class="float-end btn btn-primary btn-sm">edit</button><hr>
-    </li>
-    {% endfor %}
-</ul>
+    <div class="row">
+        {% for resource in resources %}
+        <div class=" col-sm-12 col-md-6">
+            <a target="_blank" href="{{resource.resource_url}}">{{resource.resource_description}}</a>
+        </div>
+        <div class="col-sm-12 col-md-6">
+            <button class="float-end btn btn-primary btn-sm">edit</button>
+        </div>
+        <hr class="mt-3">
+        {% endfor %}
+    </div>
+    
 {% endblock %}
