--- a/resource_keeper/templates/add_resource.html
+++ b/resource_keeper/templates/add_resource.html
@@ -1,29 +1,32 @@
 {% extends "base.html" %}
-
 {% block content %}
 <h3 class="text-center pb-4">Add Resource</h3>
 <div class="row">
-    <!--input form-->
-    <form class="col-sm-12" action="{{ url_for('add_resource', category_id=category_id)}}" method="POST">
-      <div class="mb-3">
-        <label for="category_name" class="form-label">Category Name</label>
-        <input type="text" name="category_name" class="form-control" id="category_name" placeholder="{{category_name}}" disabled>
-      </div>
-        <!--form input for task name-->
-        <div class="mb-3">
-            <label for="resource_name" class="form-label">Resource Name</label>
-            <input type="text" name="resource_name" class="form-control" id="resource_name" required>
-          </div>
-          <div class="mb-3">
-            <label for="resource_url" class="form-label">Resource URL</label>
-            <input type="text" name="resource_url" class="form-control" id="resource_url" required>
-          </div>
-          <div class="mb-3">
-            <label for="resource_description" class="form-label">Resource Description</label>
-            <textarea class="form-control" id="resource_description" rows="3" name="text"></textarea>
-          </div>
-          <input class="btn btn-primary" type="submit" value="Submit">
-    </form>
+  <!--input form-->
+  <form class="col-sm-12" action="{{ url_for('add_resource', category_id=category_id)}}" method="POST">
+    <!--show category name (diabled)-->
+    <div class="mb-3">
+      <label for="category_name" class="form-label">Category Name</label>
+      <input type="text" name="category_name" class="form-control" id="category_name" placeholder="{{category_name}}"
+        disabled>
+    </div>
+    <!--form input for resource name-->
+    <div class="mb-3">
+      <label for="resource_name" class="form-label">Resource Name</label>
+      <input autofocus type="text" name="resource_name" class="form-control" id="resource_name" required>
+    </div>
+    <!--form input for resource url-->
+    <div class="mb-3">
+      <label for="resource_url" class="form-label">Resource URL</label>
+      <input type="text" name="resource_url" class="form-control" id="resource_url" required>
+    </div>
+    <!--form input for resource description-->
+    <div class="mb-3">
+      <label for="resource_description" class="form-label">Resource Description</label>
+      <textarea class="form-control" id="resource_description" rows="3" name="resource_description"></textarea>
+    </div>
+    <input class="btn btn-primary" type="submit" value="Add">
+  </form>
 </div>
 
 {% endblock %}
