--- a/resource_keeper/templates/categories.html
+++ b/resource_keeper/templates/categories.html
@@ -11,7 +11,7 @@
 <div class="row">
     {% for category in categories %}
     <div class="col-sm-12 col-md-6 col-lg-3">
-        <div class="card mb-3" style ="border-style: solid; border-color: brown">
+        <div class="card mb-3" style ="border-style: solid; border-color: blue">
             <div class="card-body text-center">
               <h5 class="card-title">{{ category.category_name}}</h5>
               <a href="{{url_for('view_resources', category_id=category.id)}}" class="btn btn-info">View</a>
