--- a/resource_keeper/templates/edit_categories.html
+++ b/resource_keeper/templates/edit_categories.html
@@ -6,11 +6,11 @@
 <div class="row">
     {% for category in categories %}
     <div class="col-sm-12 col-md-6 col-lg-3">
-        <div class="card mb-3">
+        <div class="card mb-3" style ="border-style: solid; border-color: blue">
             <div class="card-body text-center">
               <h5 class="card-title">{{ category.category_name}}</h5>
-              <a href="#" class="btn btn-success">Edit</a>
-              <a href="#" class="btn btn-danger">Delete</a>
+              <a href="{{ url_for('edit_category', category_id=category.id)}}" class="btn btn-primary mb-3" role="button">Edit</a>
+              <a href="{{url_for('delete_category', category_id=category.id)}}" class="btn btn-danger mb-3" role="button">delete</a>
             </div>
           </div>
     </div>
