--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -6,8 +6,9 @@
         <div class=" col-sm-12 col-md-6">
             <a target="_blank" href="{{resource.resource_url}}">{{resource.resource_description}}</a>
         </div>
-        <div class="col-sm-12 col-md-6">
-            <button class="float-end btn btn-primary btn-sm">edit</button>
+        <!--make col flex container to auto push content to right-->
+        <div class="col-sm-12 col-md-6 d-flex">
+            <button class="ms-auto btn btn-primary btn-sm">edit</button>
         </div>
         <hr class="mt-3">
         {% endfor %}
