--- a/resource_keeper/templates/categories.html
+++ b/resource_keeper/templates/categories.html
@@ -16,6 +16,7 @@
               <h5 class="card-title">{{ category.category_name}}</h5>
               <a href="{{url_for('view_resources', category_id=category.id)}}" class="btn btn-info">View</a>
               <a href="{{url_for('add_resource', category_id=category.id)}}" class="btn btn-info">Add</a>
+              <a href="{{url_for('edit_category', category_id=category.id)}}" class="btn btn-info">Edit</a>
             </div>
           </div>
     </div>
