--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -8,7 +8,12 @@
         </div>
         <!--make col flex container to auto push content to right-->
         <div class="col-sm-12 col-md-6 d-flex">
+            <!--ms-auto pushes first inline element right and next 
+                 inline element flows normally-->
+            
+            <!--button class=" btn btn-danger btn-sm">delete</button-->
             <button class="ms-auto btn btn-primary btn-sm">edit</button>
+            <a href="{{url_for('delete_resource', resource_id=resource.id)}}" class="btn btn-danger btn-sm">delete</a>
         </div>
         <hr class="mt-3">
         {% endfor %}
