--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -4,16 +4,11 @@
     <div class="row">
         {% for resource in resources %}
         <div class=" col-sm-12 col-md-6">
-            <a target="_blank" href="{{resource.resource_url}}">{{resource.resource_description}}</a>
+            <a target="_blank" href="{{resource.resource_url}}">{{resource.resource_name}}</a>
         </div>
-        <!--make col flex container to auto push content to right-->
+        <!--make col flex container then set margin start to auto with ms-auto to push content to right-->
         <div class="col-sm-12 col-md-6 d-flex">
-            <!--ms-auto pushes first inline element right and next 
-                 inline element flows normally-->
-            
-            <!--button class=" btn btn-danger btn-sm">delete</button-->
-            <button class="ms-auto btn btn-primary btn-sm">edit</button>
-            <a href="{{url_for('delete_resource', resource_id=resource.id)}}" class="btn btn-danger btn-sm">delete</a>
+            <a href="{{url_for('edit_resource', resource_id=resource.id)}}" class="ms-auto btn btn-primary btn-sm">edit</a>
         </div>
         <hr class="mt-3">
         {% endfor %}
