add default values to edit form

--- a/resource_keeper/templates/edit_resource.html
+++ b/resource_keeper/templates/edit_resource.html
@@ -8,6 +8,7 @@
     <select name="category_id" class="form-select mb-3" aria-label="Default select example">
       <option selected value="{{ category_id }}">{{ current_category }}</option>
       {% for category in categories %}
+      <!--do  not show current category twice in dropdown-->
       {% if category.category_name != current_category %}
       <option value="{{category.id}}">{{ category.category_name }}</option>
       {% endif %}
@@ -16,19 +17,19 @@
     <!--form input for resource name-->
     <div class="mb-3">
       <label for="resource_name" class="form-label">Resource Name</label>
-      <input autofocus type="text" name="resource_name" class="form-control" id="resource_name" required>
+      <input autofocus type="text" name="resource_name" class="form-control" id="resource_name" required value="{{ resource.resource_name}}">
     </div>
     <!--form input for resource url-->
     <div class="mb-3">
       <label for="resource_url" class="form-label">Resource URL</label>
-      <input type="text" name="resource_url" class="form-control" id="resource_url" required>
+      <input type="text" name="resource_url" class="form-control" id="resource_url" required value="{{ resource.resource_url}}">
     </div>
     <!--form input for resource description-->
     <div class="mb-3">
       <label for="resource_description" class="form-label">Resource Description</label>
-      <textarea class="form-control" id="resource_description" rows="3" name="resource_description"></textarea>
+      <textarea class="form-control" id="resource_description" rows="3" name="resource_description" placeholder="{{ resource.resource_name}}"></textarea>
     </div>
-    <input class="btn btn-primary" type="submit" value="Add">
+    <input class="btn btn-primary" type="submit" value="edit">
   </form>
 </div>
 {% endblock %}
