--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -3,15 +3,22 @@
 <h3 class="text-center pb-4">Resources</h3>
     <div class="row">
         {% for resource in resources %}
-        <div class=" col-sm-12 col-md-6">
+        <div class=" col-sm-12 col-md-4">
             <a target="_blank" href="{{resource.resource_url}}">{{resource.resource_name}}</a>
         </div>
+        <div class="dropdown col-sm-12 col-md-4">
+            <span class="fst-italic fw-light">details</span>
+            <div class="dropdown-content">
+            <p>{{resource.resource_description}}</p>
+            </div>
+          </div>
+          
         <!--make col flex container then set margin start to auto with ms-auto to push content to right-->
-        <div class="col-sm-12 col-md-6 d-flex">
+        <div class="col-sm-12 col-md-4 d-flex">
             <a href="{{url_for('edit_resource', resource_id=resource.id)}}" class="ms-auto btn btn-primary btn-sm">edit</a>
         </div>
         <hr class="mt-3">
         {% endfor %}
     </div>
-    
+        
 {% endblock %}
