--- a/resource_keeper/static/css/style.css
+++ b/resource_keeper/static/css/style.css
@@ -13,4 +13,21 @@ body {
   .main {
     flex: 1 0 auto;
   }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
   
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color:whitesmoke;
+    max-width: 500px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
