--- a/resource_keeper/static/css/style.css
+++ b/resource_keeper/static/css/style.css
@@ -13,6 +13,9 @@ body {
   .main {
     flex: 1 0 auto;
   }
+
+  /* edit_resource view dropdown*/
+  
   .dropdown {
     position: relative;
     display: inline-block;
