--- a/resource_keeper/static/css/style.css
+++ b/resource_keeper/static/css/style.css
@@ -1,13 +1,51 @@
-footer {
-    background-color:black;
-    color: white;
-    
+/* Styles for Resource Keeper app*/
+
+.nav-header {
+  color: #FFBBE1;
+  background-color: #B80257;
 }
+
+.nav-link {
+  color: #FFBBE1;
+}
+footer {
+    background-color:#FC7FB6;
+    color: #FFBBE1;  
+}
+
+a {
+  color: #B80257;
+}
+
+.btn {
+  background-color: #B80257;
+  color: #FFBBE1; 
+}
+
+.btn:hover {
+  background-color:#FC7FB6;
+  color: #B80257;
+}
+
+.btn-delete{
+  background-color:red
+}
+
+.card {
+  border-style: solid ; 
+  border-width: 1px;
+  border-color:#B80257;
+  background-color:#FC7FB6;
+}
+
+
 /* push footer to bottom of page */
+
 body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background-color: #FFBBE1;
   }
 
   .main {
@@ -23,9 +61,10 @@ body {
   
   .dropdown-content {
     display: none;
+    border-radius: 10px;
     position: absolute;
     background-color:whitesmoke;
-    max-width: 500px;
+    max-width: 450px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
