--- a/resource_keeper/templates/base.html
+++ b/resource_keeper/templates/base.html
@@ -14,10 +14,10 @@
   <title>Resource Keeper App</title>
 </head>
 
-<body >
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body style="color:#B80257;" >
+  <nav class="nav-header navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{url_for('home')}}">Resource Keeper</a>
+      <a class="navbar-brand" href="{{url_for('home')}}" style="color:#FFBBE1;">Resource Keeper</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
