--- a/resource_keeper/templates/categories.html
+++ b/resource_keeper/templates/categories.html
@@ -5,18 +5,18 @@
 
 <div class="row">
     <div class="col s12 d-flex justify-content-center mb-3">
-        <a class="btn btn-primary" href="{{url_for('add_category')}}" role="button"><i class="fa-solid fa-plus"></i> New Category</a>
+        <a class="btn" href="{{url_for('add_category')}}" role="button"><i class="fa-solid fa-plus"></i> New Category</a>
     </div>
 </div>
 <div class="row">
     {% for category in categories %}
     <div class="col-sm-12 col-md-6 col-lg-3">
-        <div class="card mb-3" style ="border-style: solid; border-color: blue">
+        <div class="card mb-3">
             <div class="card-body text-center">
               <h5 class="card-title">{{ category.category_name}}</h5>
-              <a href="{{url_for('view_resources', category_id=category.id)}}" class="btn btn-info">View</a>
-              <a href="{{url_for('add_resource', category_id=category.id)}}" class="btn btn-info">Add</a>
-              <a href="{{url_for('edit_category', category_id=category.id)}}" class="btn btn-info">Edit</a>
+              <a href="{{url_for('view_resources', category_id=category.id)}}" class="btn">View</a>
+              <a href="{{url_for('add_resource', category_id=category.id)}}" class="btn">Add</a>
+              <a href="{{url_for('edit_category', category_id=category.id)}}" class="btn">Edit</a>
             </div>
           </div>
     </div>
