--- a/resource_keeper/templates/edit_categories.html
+++ b/resource_keeper/templates/edit_categories.html
@@ -9,7 +9,7 @@
         <div class="card mb-3" style ="border-style: solid; border-color: blue">
             <div class="card-body text-center">
               <h5 class="card-title">{{ category.category_name}}</h5>
-              <a href="{{ url_for('edit_category', category_id=category.id)}}" class="btn btn-primary mb-3" role="button">Edit</a>
+              <a href="{{ url_for('edit_category', category_id=category.id)}}" id="myBtn" class="mb-3" role="button">Edit</a>
               <a href="{{url_for('delete_category', category_id=category.id)}}" class="btn btn-danger mb-3" role="button">delete</a>
             </div>
           </div>
