--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h3 class="text-center pb-4">Resources</h3>
+<h3 class="text-center pb-4 mt-3">{{category}}</h3>
     <div class="row">
         {% for resource in resources %}
         <div class=" col-sm-12 col-md-4">
@@ -15,7 +15,7 @@
           
         <!--make col flex container then set margin start to auto with ms-auto to push content to right-->
         <div class="col-sm-12 col-md-4 d-flex">
-            <a href="{{url_for('edit_resource', resource_id=resource.id)}}" class="ms-auto btn btn-primary btn-sm">edit</a>
+            <a href="{{url_for('edit_resource', resource_id=resource.id)}}" class="ms-auto btn btn-sm">edit</a>
         </div>
         <hr class="mt-3">
         {% endfor %}
