add max-length attributes to input tags

--- a/resource_keeper/templates/add_resource.html
+++ b/resource_keeper/templates/add_resource.html
@@ -18,12 +18,12 @@
     <!--form input for resource url-->
     <div class="mb-3">
       <label for="resource_url" class="form-label">Resource URL</label>
-      <input type="text" name="resource_url" class="form-control" id="resource_url" required maxlength="255">
+      <input type="text" name="resource_url" class="form-control" id="resource_url" required maxlength="100">
     </div>
     <!--form input for resource description-->
     <div class="mb-3">
       <label for="resource_description" class="form-label">Resource Description</label>
-      <textarea class="form-control" id="resource_description" rows="3" maxlength="100" name="resource_description">You can add a note here...</textarea>
+      <textarea class="form-control" id="resource_description" maxlength="200" name="resource_description">You can add a note here...</textarea>
     </div>
     <input class="btn" type="submit" value="Add">
   </form>
