--- a/resource_keeper/templates/base.html
+++ b/resource_keeper/templates/base.html
@@ -5,11 +5,10 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--fontawsome cdn-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
   <title>Resource Keeper App</title>
 </head>
@@ -25,12 +24,6 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('home')}}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{url_for('add_category')}}">New Category</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{url_for('edit_categories')}}">Edit Categories</a>
           </li>
         </ul>
       </div>
