--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -3,10 +3,12 @@
 <h3 class="text-center pb-4 mt-3">{{category}}</h3>
     <div class="row">
         {% for resource in resources %}
-        <div class=" col-sm-12 col-md-4">
-            <a target="_blank" href="{{resource.resource_url}}">{{resource.resource_name}}</a>
+        <div class=" col-sm-12 col-md-6">
+            <p>
+                <span class="material-icons me-3" style="vertical-align: text-bottom;">open_in_new</span><a target="_blank" href="{{resource.resource_url}}">{{resource.resource_name}}</a>
+            </p>
         </div>
-        <div class="dropdown col-sm-12 col-md-4">
+        <div class="dropdown col-sm-12 col-md-3">
             <span class="fst-italic fw-light">details</span>
             <div class="dropdown-content">
             <p>{{resource.resource_description}}</p>
@@ -14,8 +16,8 @@
           </div>
           
         <!--make col flex container then set margin start to auto with ms-auto to push content to right-->
-        <div class="col-sm-12 col-md-4 d-flex">
-            <a href="{{url_for('edit_resource', resource_id=resource.id)}}" class="ms-auto btn btn-sm">edit</a>
+        <div class="col-sm-12 col-md-3 d-flex">
+            <a href="{{url_for('edit_resource', resource_id=resource.id)}}" style="align-self:start;" class="ms-auto btn btn-sm">edit</a>
         </div>
         <hr class="mt-3">
         {% endfor %}
