add max-length to textarea tag

--- a/resource_keeper/templates/edit_resource.html
+++ b/resource_keeper/templates/edit_resource.html
@@ -27,7 +27,7 @@
     <!--form input for resource description-->
     <div class="mb-3">
       <label for="resource_description" class="form-label">Resource Description</label>
-      <textarea class="form-control" id="resource_description" rows="3" name="resource_description">{{ resource.resource_description}}</textarea>
+      <textarea class="form-control" id="resource_description" maxlength="200" name="resource_description">{{ resource.resource_description}}</textarea>
     </div>
     <input class="btn" type="submit" value="edit">
     <a href="{{url_for('delete_resource', resource_id=resource.id)}}" class="btn btn-delete" role="button">delete</a>
