--- a/resource_keeper/templates/categories.html
+++ b/resource_keeper/templates/categories.html
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col s12 d-flex justify-content-center mb-3">
-        <a class="btn" href="{{url_for('add_category')}}" role="button"><i class="fa-solid fa-plus"></i> New Category</a>
+        <a class="btn" href="{{url_for('add_category')}}" role="button"><span class="material-icons" style="vertical-align:text-top;">add_box</span> New Category</a>
     </div>
 </div>
 <div class="row">
