--- a/resource_keeper/templates/edit_category.html
+++ b/resource_keeper/templates/edit_category.html
@@ -4,16 +4,36 @@
 <h3 class="text-center pb-4">Edit Category</h3>
 <form class="col-sm-12" action="{{ url_for('edit_category', category_id=category.id) }}" method="POST">
     <div class="mb-3">
-        <!--diabled placeholder input-->
+        <!--disabled placeholder input-->
         <label for="category_name" class="form-label">Category Name</label>
         <input type="text" name="category_placeholder" class="form-control" id="category_placeholder"
-            placeholder="{{category.category_name}}" disabled>
+            placeholder="{{category.category_name}}" selected  disabled>
     </div>
+
     <div class="mb-3">
-        <label for="category_name" class="form-label">New Category Name</label>
+        <label for="category_name" class="form-label">New name for category</label>
         <input autofocus type="text" class="form-control" id="category_name" name="category_name" required>
     </div>
     <button type="submit" class="btn mb-3">rename</button>
-    <a href="{{url_for('delete_category', category_id=category.id)}}" class="btn btn-delete mb-3" role="button">delete</a>
+    <!--delete button targeting confirmation popup-->
+    <a data-bs-toggle="modal" data-bs-target="#deleteCategoryModal" class="btn btn-delete mb-3" role="button">delete</a>
 </form>
+
+<!--BS5 modal to confirm delete category-->
+<div class="modal" id="deleteCategoryModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">{{category.category_name}}</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Delete {{category.category_name}} category?</p>
+      </div>
+      <div class="modal-footer">
+        <a href="{{url_for('delete_category', category_id=category.id)}}" type="button" class="btn btn-delete">delete</a>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
