change anchor attribute

--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -5,7 +5,7 @@
         {% for resource in resources %}
         <div class=" col-sm-12 col-md-6">
             <p>
-                <span class="material-icons me-3" style="vertical-align: text-bottom;">open_in_new</span><a target="_blank" href="{{resource.resource_url}}">{{resource.resource_name}}</a>
+                <span class="material-icons me-3" style="vertical-align: text-bottom;">open_in_new</span><a  href="{{resource.resource_url}}">{{resource.resource_name}}</a>
             </p>
         </div>
         <div class="dropdown col-sm-12 col-md-3">
