add maxlength to form inputs

--- a/resource_keeper/templates/edit_category.html
+++ b/resource_keeper/templates/edit_category.html
@@ -12,7 +12,7 @@
 
     <div class="mb-3">
         <label for="category_name" class="form-label">New name for category</label>
-        <input autofocus type="text" class="form-control" id="category_name" name="category_name" required>
+        <input autofocus type="text" class="form-control" id="category_name" name="category_name" required maxlength="50">
     </div>
     <button type="submit" class="btn mb-3">rename</button>
     <!--delete button targeting confirmation popup-->
