remove button class

--- a/resource_keeper/templates/edit_resource.html
+++ b/resource_keeper/templates/edit_resource.html
@@ -45,7 +45,7 @@
         <p>Delete {{resource.resource_name}} resource?</p>
       </div>
       <div class="modal-footer">
-        <a href="{{url_for('delete_resource', resource_id=resource.id)}}" type="button" class="btn btn-delete">delete</a>
+        <a href="{{url_for('delete_resource', resource_id=resource.id)}}" class="btn btn-delete">delete</a>
       </div>
     </div>
   </div>
