--- a/resource_keeper/templates/add_category.html
+++ b/resource_keeper/templates/add_category.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h3 class="text-center pb-4">Add Category</h3>
+<!--form to add new category-->
 <form class="col-sm-12" action="{{ url_for('add_category') }}" method="POST">
   <div class="mb-3">
     <label for="category_name" class="form-label">New Category</label>
