--- a/resource_keeper/templates/add_category.html
+++ b/resource_keeper/templates/add_category.html
@@ -6,7 +6,7 @@
 <form class="col-sm-12" action="{{ url_for('add_category') }}" method="POST">
   <div class="mb-3">
     <label for="category_name" class="form-label">New Category</label>
-    <input autofocus type="text" class="form-control" id="category_name" name="category_name" >
+    <input autofocus type="text" class="form-control" id="category_name" name="category_name" maxlength="25">
   </div>
   <button type="submit" class="btn mb-3">Add</button>
 </form>
