move styles to css

--- a/resource_keeper/templates/base.html
+++ b/resource_keeper/templates/base.html
@@ -19,7 +19,7 @@
   <title>Resource Keeper</title>
 </head>
 
-<body style="color:#B80257;" >
+<body>
   <nav class="nav-header navbar navbar-expand-lg">
     <div class="container-fluid">
       <!--bootstap snippet for navbar-->
@@ -47,7 +47,7 @@
     <footer>
       <!--make div into flex container to centre text-->
       <div class="d-flex justify-content-center text-muted">
-        <p style="color: white;">Copyright Andy Brown 2023</p>
+        <p>Copyright Andy Brown 2023</p>
       </div>
     </footer>
   </div>
