--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -6,7 +6,7 @@
     <!--make col flex container with .d-flex-->
     <div class="col-12 col-md-6 d-flex  justify-content-sm-start">
         <p>
-            <span class="material-icons me-3" style="vertical-align: text-bottom;">open_in_new</span><a
+            <span class="material-icons me-3" >open_in_new</span><a
                 href="{{resource.resource_url}}">{{resource.resource_name}}</a>
         </p>
     </div>
@@ -20,7 +20,7 @@
 
     <div class="col-6 col-md-3 d-flex justify-content-end">
         <!--align-self:start stops button stretching-->
-        <a href="{{url_for('edit_resource', resource_id=resource.id)}}" style="align-self: self-start;"
+        <a href="{{url_for('edit_resource', resource_id=resource.id)}}" style="align-self:self-start;"
             class="btn btn-sm">edit</a>
     </div>
     <hr class="mt-3">
