add attribute vertical-align: middle

--- a/resource_keeper/templates/view_resources.html
+++ b/resource_keeper/templates/view_resources.html
@@ -6,7 +6,7 @@
     <!--make col flex container with .d-flex-->
     <div class="col-12 col-md-6 d-flex  justify-content-sm-start">
         <p>
-            <span class="material-icons me-3" >open_in_new</span><a
+            <span class="material-icons me-3" style="vertical-align: middle">open_in_new</span><a
                 href="{{resource.resource_url}}">{{resource.resource_name}}</a>
         </p>
     </div>
