remove textbox placeholder text

--- a/resource_keeper/templates/add_resource.html
+++ b/resource_keeper/templates/add_resource.html
@@ -23,7 +23,7 @@
     <!--form input for resource description-->
     <div class="mb-3">
       <label for="resource_description" class="form-label">Resource Description</label>
-      <textarea class="form-control" id="resource_description" maxlength="200" name="resource_description">You can add a note here...</textarea>
+      <textarea class="form-control" id="resource_description" maxlength="200" name="resource_description" required></textarea>
     </div>
     <input class="btn" type="submit" value="Add">
   </form>
