--- a/resource_keeper/templates/edit_resource.html
+++ b/resource_keeper/templates/edit_resource.html
@@ -30,6 +30,7 @@
       <textarea class="form-control" id="resource_description" maxlength="200" name="resource_description">{{ resource.resource_description}}</textarea>
     </div>
     <input class="btn" type="submit" value="edit">
+    <!--Bootstrap modal-->
     <a data-bs-toggle="modal" data-bs-target="#deleteResourceModal"  class="btn btn-delete" role="button">delete</a>
   </form>
 </div>
